--- a/style.index.2.css
+++ b/style.index.2.css
@@ -1,40 +1,94 @@
-html,body{
-    margin: 0%;
-    padding: 0%;
+html, body{
+
+margin: 0%;
+padding: 0%;
+
 }
+
 html{
-    background-image: url(img/img.jpg);
+background-image: url(img/img.jpg);
+
 }
 
 header{
+
     display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: red;
+    text-shadow: deeppink;
+    font-weight: bold;
+    background-color: burlywood ;
 }
 
-.header{
-    background-color: purple;
-    width: 100%;
-    height: 50px;
-    text-align: center;
+img{
+    height: 70px;
+    width: 70px;
+
+}
+
+a{
+    text-decoration-line: none;
+    color: tomato;
 }
 
 main{
     display: flex;
     justify-content: space-around;
-    margin-top: 30px;
 
 }
 
-.div1, .div2{
-    background-color: red;
-    height: 500px;
-    width: 20%;
+.bouton1{
+
+    flex-direction: column;
+    background-color: aqua;  
+    height: 300px;
+    width: 30%;
+    margin-top: 20px;
     text-align: center;
+    justify-content: space-around;
+     
+}
+
+.bouton2{
+
+    flex-direction: column;
+    background-color: green;  
+    height: 300px;
+    width: 30%;
+    margin-top: 20px;
+    text-align: center;
+    justify-content: space-around;
 
 }
 
-.footer{
-    background-color: mediumpurple;
-    height: 500px;
-    width: 100%;
+.bouton3{
+
+    flex-direction: column;
+    background-color:greenyellow;  
+    height: 300px;
+    width: 30%;
+    margin-top: 20px;
     text-align: center;
+    justify-content: space-around;
+
+
+}
+
+footer{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+
+}
+
+.bas{
+    display: flex;
+    background-color: honeydew;
+    
+    height: 100%;
+    width: 50%;
+    text-align: center;
+    justify-content: center;
+    justify-content: space-around;
 }
