--- a/style.index.2.css
+++ b/style.index.2.css
@@ -92,3 +92,19 @@ footer{
     justify-content: center;
     justify-content: space-around;
 }
+
+.container{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+    background-color: ivory;
+    height: 300px;
+    width: 400px;
+    margin-left: 40%;
+    margin-top: 15%;
+
+
+}
+
